--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "core-js": "^3.40.0",
     "jose": "^6.0.10",
     "mongoose": "^8.13.0",
+    "next": "^15.3.0",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
