--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
+    "postinstall": "chmod +x node_modules/.bin/vite",
     "build": "vite build",
     "lint": "eslint",
     "serve": "vite preview",
