--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux": "5.0.1",
-    "simplebar-react": "^3.3.0"
+    "simplebar-react": "^3.3.0",
+    "vite": "^6.2.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
@@ -54,7 +55,10 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.2",
     "prettier": "3.5.1",
-    "sass": "^1.85.0",
-    "vite": "^6.1.0"
-  }
+    "sass": "^1.85.0"
+  },
+  "engines": {
+  "node": "20.x"
+}
+
 }
